--- a/_config.next.yml
+++ b/_config.next.yml
@@ -638,7 +638,7 @@ gitalk:
 # For more information: https://utteranc.es
 utterances:
   enable: true
-  repo: INeedNZT/INeedNZT.github.io # Github repository owner and name
+  repo: INeedNZT/zh # Github repository owner and name
   # Available values: pathname | url | title | og:title
   issue_term: pathname
   # Available values: github-light | github-dark | preferred-color-scheme | github-dark-orange | icy-dark | dark-blue | photon-dark | boxy-light
