--- a/_config.next.yml
+++ b/_config.next.yml
@@ -103,7 +103,7 @@ menu:
   #schedule: /schedule/ || fa fa-calendar
   #sitemap: /sitemap.xml || fa fa-sitemap
   #commonweal: /404/ || fa fa-heartbeat
-  英文: https://ineednzt.github.io/ || fa fa-language
+  English: https://ineednzt.github.io/ || fa fa-language
 
 # Enable / Disable menu icons / item badges.
 menu_settings:
