--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Jingming's Blog
+title: 一枚程序员的日常
 subtitle: ''
 description: ''
 keywords:
-author: Jingming Xia
+author: 夏靖明
 timezone: ''
 
 # URL
